# Withings2Garmin

./: .gitignore  .gitleaksignore  .renovaterc.json  LICENSE  README.md  biome.json  dprint.json  fit_encoder.py  garmin_client.py  hk.pkl  mise.toml  pyproject.toml  renovate.json  sync.py
.github/workflows/: ci.yml  hk.yml  pages.yml  release.yml
docs/: index.html
sample/: .env.example
scripts/: refresh_pico_vendor.py  update_pico_sri.py
src/withings2garmin/: __init__.py  __main__.py  fit_encoder.py  garmin_client.py  paths.py  sync.py  withings_client.py
tests/: test_fit_encoder.py  test_garmin_client.py  test_paths.py  test_sync.py  test_withings_client.py
