[project]
name = "withings2garmin-hugoh"
dynamic = ["version"]
description = "Simplified Withings to Garmin sync tool"
authors = [
  { name = "Albert Sodel", email = "sodelalbert@gmail.com" },
  { name = "Hugo Haas", email = "hugoh@hugoh.net" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

dependencies = [
  "requests>=2.34.2",
  "garminconnect>=0.3.6",
  "platformdirs>=4.0",
  "python-dotenv>=1.2.2",
  "garmin-fit-sdk>=21.208.0",
  "tenacity>=9.1.4",
  "filelock>=3.29.7",
]

[project.scripts]
withings2garmin = "withings2garmin.sync:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "ty>=0.0.57",
  "ruff>=0.15.20",
  "pytest>=9.1.1",
  "types-requests>=2.33.0.20260518",
]

[tool.hatch.build.targets.wheel]
packages = ["src/withings2garmin"]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
