[project]
name = "withings2garmin-hugoh"
description = "Simplified Withings to Garmin sync tool"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Albert Sodel" },
  { name = "Hugo Haas" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
dynamic = ["version"]

dependencies = [
  "filelock>=3.29.7",
  "garmin-fit-sdk>=21.208.0",
  "garminconnect>=0.3.6",
  "platformdirs>=4.0",
  "python-dotenv>=1.2.2",
  "requests>=2.34.2",
  "tenacity>=9.1.4",
]

[project.urls]
Homepage = "https://github.com/hugoh/Withings2Garmin"
Issues = "https://github.com/hugoh/Withings2Garmin/issues"
Repository = "https://github.com/hugoh/Withings2Garmin"
Upstream = "https://github.com/jaroslawhartman/withings-sync"

[project.scripts]
withings2garmin = "withings2garmin.sync:main"

[dependency-groups]
dev = [
  "pytest>=9.1.1",
  "ruff>=0.15.20",
  "ty>=0.0.57",
  "types-requests>=2.33.0.20260518",
]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/withings2garmin"]

[tool.hatch.version]
source = "vcs"

[tool.pyrefly]
project-includes = [
  "**/*.py*",
  "**/*.ipynb",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
